<resources>
    <string name="app_name">Ethermine Monitor</string>
    <string name="big_title_app">Ethermine</string>
    <string name="small_title_app">ETH &amp; ETC</string>
    <string name="small_title_app2">Mining Pool</string>
    <string name="btn_ok">OK</string>
    <string name="reported_hashrate">Reported</string>
    <string name="current_hashrate">Current</string>
    <string name="average_hashrate">Average</string>
    <string name="workers">Workers</string>
    <string name="worker">Worker</string>
    <string name="reported_hashrate_highlight">Reported:\u0020</string>
    <string name="current_hashrate_highlight">Current:\u0020</string>
    <string name="average_hashrate_highlight">Average:\u0020</string>
    <string name="worker_highlight">Workers:\u0020</string>
    <string name="hashrate">HASHRATE</string>
    <string name="shares">SHARES</string>
    <string name="upaid_balance">Unpaid Balance</string>
    <string name="next_payout">Next Payout</string>
    <string name="title_worker">Workers</string>
    <string name="valid">Valid</string>
    <string name="stale">Stale</string>
    <string name="invalid">Invalid</string>
    <string name="last_seen">Last Seen</string>
    <string name="last_shares">Last Shares</string>
    <string name="eth_title">ETH</string>
    <string name="etc_title">ETC</string>
    <string name="eth">\u0020 ETH</string>
    <string name="etc">\u0020 ETC</string>
    <string name="btc">BTC</string>
    <string name="usd">USD</string>
    <string name="eth_btc">ETH/BTC</string>
    <string name="eth_usd">ETH/USD</string>
    <string name="etc_btc">ETC/BTC</string>
    <string name="etc_usd">ETC/USD</string>
    <string name="btc_usd">BTC/USD</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="worker_name">Worker Name</string>
    <string name="current">Current</string>
    <string name="reported">Reported</string>
    <string name="avg">Average</string>
    <string name="total">TOTAL</string>
    <string name="miner_settings">Miner Settings:</string>
    <string name="email_address">Email Address</string>
    <string name="payment_threshold">Payment Threshold</string>
    <string name="worker_public_IP">Worker Public IP</string>
    <string name="paid_on">Paid On</string>
    <string name="duration">Duration</string>
    <string name="TxHash">TxHash</string>
    <string name="last">Last Payouts</string>
    <string name="eth_address"><font size="16">Wallet address on ethermine.org</font></string>
    <string name="title_account">Account</string>
    <string name="change_notification">Notification when worker offline\n(no reported hashrate on ethermine)</string>
    <string name="send_email">Send a mail if one of my workers goes offline</string>
    <!--change text account-->
    <string name="unit_hashrate_etc">\u0020GH/s</string>
    <string name="unit_hashrate_eth">\u0020MH/s</string>
    <string name="time">Time:\u0020</string>
    <string name="title_id_suggestions">Most recently used wallet addresses:</string>
    <string name="edit_by_eth_ethermine">Edit by ethermine.org</string>
    <string name="edit_by_etc_ethermine">Edit by etc.ethermine.org</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="more_apps_my_us">More apps by us</string>
    <string name="feedback_to_us">Feedback to us</string>
    <string name="views_ads_to_donate">View &amp; click ads to donate us</string>
    <string name="rate_us">Rate us 5 stars</string>
    <string name="view_modes">View mode</string>
    <string name="both_landscape_and_portrait">Both</string>
    <string name="only_landscape">Landscape</string>
    <string name="only_portrait">Portrait</string>
    <string name="view_mode">View Mode:\u0020</string>

    <!--view modes-->
    <string-array name="view_modes">
        <item>Both Landscape and Portrait</item>
        <item>Only Landscape</item>
        <item>Only Portrait</item>
    </string-array>
</resources>
