<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/title_account"
                        android:textColor="@color/colorWhite" />

                    <RadioGroup
                        android:id="@+id/rg_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/account_eth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="15dp"
                            android:text="@string/eth"
                            android:textColor="@color/colorWhite" />

                        <RadioButton
                            android:id="@+id/account_etc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="15dp"
                            android:text="@string/etc"
                            android:textColor="@color/colorWhite" />
                    </RadioGroup>
                    <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:orientation="horizontal">-->
                    <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_marginRight="10dp">-->
                    <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textColor="@color/colorWhite"-->
                    <!--android:textSize="10dp"-->
                    <!--android:text="@string/eth"/>-->
                    <!--<RadioButton-->
                    <!--android:id="@+id/checked_eth"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:scaleX="0.8"-->
                    <!--android:scaleY="0.8"-->
                    <!--android:checked="true"-->
                    <!--/>-->
                    <!--</LinearLayout>-->
                    <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_marginRight="10dp">-->
                    <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textColor="@color/colorWhite"-->
                    <!--android:textSize="10dp"-->
                    <!--android:text="@string/etc"/>-->
                    <!--<RadioButton-->
                    <!--android:id="@+id/checked_etc"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:scaleX="0.8"-->
                    <!--android:scaleY="0.8"-->
                    <!--/>-->
                    <!--</LinearLayout>-->
                    <!--</LinearLayout>-->
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_id_miner"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:hint="@string/eth_address"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:scrollHorizontally="true"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/button_mining_pool"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:padding="10dp"
                        android:text="@string/btn_ok" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/container_id_suggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="0dp"
                    android:paddingBottom="4dp"
                    android:visibility="gone"
                    android:layout_marginBottom="4dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        android:paddingRight="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/title_id_suggestions"/>
                    <!--<View-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1dp"-->
                        <!--android:background="@color/colorWhite"/>-->
                    <LinearLayout
                        android:id="@+id/list_suggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <ListView
                        android:id="@+id/list_id_miner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="0dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
